Added github link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
             <p>
                 Email: <a class="email" href="mailto:n.bennett@soton.ac.uk">n.bennett@soton.ac.uk</a>
+                <br>
+                Github: <a href="http://github.com/nickbennett", target="new">github.com/NickBennett</a>
             </p>
         </div>
 
