Updated with conferences/workshops

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div id="objective">
             <p>
-                I am currently a third year PhD student at the University of Southampton studying narratives and social geographies. I specialise in topic modelling, mapping and machine learning (classification).
+                I am currently a third year PhD student at the University of Southampton studying narratives and social geographies. I specialise in topic modelling, mapping and machine learning (text classification).
                 My interests include exploring the powers of Python and R for data analysis and visualisation, playing around with Github and attending computational geography conferences.
                 <br><br>
                 I'm working on an EU project called WORKANDHOME that analyses workplace geographies amongst freelance and self-employed workers, specifically how they feel about their workplace. This involves collecting social media data,
@@ -90,24 +90,48 @@
                 <br>Machine learning, text analysis, creating maps</p>
 
                 <h2>Computer skills</h2>
-                <p>Microsoft Suite, Photoshop, Video creation, editing and production</p>
+                <p>Microsoft Suite; Photoshop; Video creation, editing and production</p>
             </dd>
+
+
+            <dd class="clear"></dd>
+              <dt>Conferences Attended</dt>
+              <dd>
+                <h2>2017</h2>
+                <p><b>September</b>: <a href="http://www.geocomputation.org/2017/conference/", target="new">GeoComputation</a> - Leeds, UK (Presenting)
+                <br><b>April</b>: <a href="http://manchester.gisruk.org/", target="new">GISRUK</a> - Manchester, UK (Presenting)
+                <h2>2016</h2>
+                <p><b>November</b>: <a href="http://lbs2016.lbsconference.org/", target="new">Location Based Services</a> - Vienna, Austria (Presenting)
+                <br><b>May</b>: <a href="http://www.websci16.org/", target="new">Web Science</a> - Hannover Germany
+              </dd>
+
+            <dd class="clear"></dd>
+              <dt>Workshops Attended</dt>
+              <dd>
+                <h2>2017</h2>
+                <p><b>February</b>: UoS/KAIST Disaster Management 2 - Grand Harbour Hotel, Southampton
+                <h2>2016</h2>
+                <p><b>June</b>: <a href="http://archivesunleashed.com/au2-0-library-of-congress/", target="new">Library of Congress Hackathon</a> - Washington, USA
+                <br><b>April</b>: UoS/VU Hackathon - Amsterdam, Netherlands
+                <br><b>February</b>: UoS/KAIST Disaster Management - Grand Harbour Hotel, Southampton
+                <h2>2015</h2>
+                <p><b>December</b>: Winter School - Shenzhen, China
+              </dd>
 
             <dd class="clear"></dd>
 
-            <dt>Experience</dt>
-            <dd>
-                <h2>Mighty Men of Valor</h2>
-                <h4>Jan 2014 - July 2014</h4>
-                <br><h2><span>Head of Media</span></h2>
-                <ul>
-                    <li>Created and produced feature-length films</li>
-                    <li>Managed Facebook and Twitter accounts</li>
-                    <li>Mentored at-risk children</li>
-                </ul>
+              <dt>Work Experience</dt>
+              <dd>
+                  <h2>Mighty Men of Valor</h2>
+                  <h4>Jan 2014 - July 2014</h4>
+                  <br><h2><span>Head of Media</span></h2>
+                  <ul>
+                      <li>Created and produced feature-length films</li>
+                      <li>Managed Facebook and Twitter accounts</li>
+                      <li>Mentored at-risk children</li>
+                  </ul>
 
-            </dd>
-
+              </dd>
             <dd class="clear"></dd>
 
             <dt>Hobbies</dt>
