Updated computer skills

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <p>Python, R
                 <br>Machine learning, text analysis, creating maps</p>
 
-                <h2>Computer skills</h2>
-                <p>Microsoft Suite; Photoshop; Video creation, editing and production</p>
+                <h2>Computer Skills</h2>
+                <p>ArcGIS Suite; Microsoft Suite; Git; Video creation, editing and production</p>
             </dd>
 
 
