Added workandhome to jobs

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
 
               <dt>Work Experience</dt>
               <dd>
+                  <h2>Work and Home EU Research Project</h2>
+                  <h4>September 2017 - Present</h4>
+                  <br><h2><span>Senior Research Administrator</span></h2>
+                  <ul>
+                    <li>Obtaining social media big data on freelancers</li>
+                    <li>Analysing and mapping their behaviours</li>
+                    <li>Creating machine learning classifiers for large-scale analyses</li>
+                  </ul>
                   <h2>Mighty Men of Valor</h2>
                   <h4>Jan 2014 - July 2014</h4>
                   <br><h2><span>Head of Media</span></h2>
