Updated text line to sound less old fashioned

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						specifically, I extract location data from Twitter and map activities within locations (all anonymously!).
 						Doing this required learning Python for data cleaning and stastistics and R for mapping and spatial analytics.
 						<br><br>
-						<a href="cv.html">For my CV, click here.</a>
+						<a href="cv.html">Here is my CV.</a>
 
 					</div>
 				</div>
