Updated with workandhome progress

--- a/cv.html
+++ b/cv.html
@@ -143,6 +143,7 @@
 							                    <li>Obtaining social media big data on freelancers</li>
 							                    <li>Analysing and mapping their behaviours</li>
 							                    <li>Creating machine learning classifiers for large-scale analyses</li>
+																	<li>Liasing with Finance departments and evaluating procurement requests involving major companies</li>
 							                  <br>
 
 																<h4>Pre-Sessional Project</h4>
