--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
 						<div class="col-6 top-head-right">
 							<ul>
 								<li class="menu-active"><a href="index.html">Home</a></li>
-								<li class="menu-active"><a href="#aboutme">About Me</a></li>
+								<li class="menu-active"><a href="index.html#aboutme">About Me</a></li>
 								<li><a href="service.html">CV</a></li>
 								<li><a href="https://scholar.google.co.uk/citations?user=wdG7htsAAAAJ&hl=en", target="new">Publications</a></li>
 							</ul>
