Updated About Me to include Treasury project

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 						specifically, I extract location data from Twitter and map activities within locations (all anonymously!).
 						Doing this required learning Python for data cleaning and stastistics and R for mapping and spatial analytics.
 						<br><br>
+						My current project involves working in partnership with HM Treasury to detect, extract and track real-time economic
+						indicators through Twitter posts. These tweets highlight the impact of economic change on the population as well as
+						potentially indicating a trend in economic prosperity. Results coming soon!
+						<br><br>
 						<a href="cv.html">Here is my CV.</a>
 
 					</div>
