--- a/cv.html
+++ b/cv.html
@@ -116,7 +116,7 @@
 																<h6><li>May: <a href="https://websci18.webscience.org/", target="new">Web Science '18</a> - Amsterdam, Netherlands (Presented)</li>
 								                <h4>2017</h4>
 								                <h6><li>September: <a href="http://www.geocomputation.org/2017/conference/", target="new">GeoComputation</a> - Leeds, UK (Presented)</li>
-								                <li>April: <a href="http://manchester.gisruk.org/", target="new">GISRUK</a> - Manchester, UK (Presenting)</li>
+								                <li>April: <a href="http://manchester.gisruk.org/", target="new">GISRUK</a> - Manchester, UK (Presented)</li>
 								                <h4>2016</h4>
 								                <h6><li>November: <a href="http://lbs2016.lbsconference.org/", target="new">Location Based Services</a> - Vienna, Austria (Presented)</li>
 								                <li>May: <a href="http://www.websci16.org/", target="new">Web Science</a> - Hannover Germany (Attended)</li></h6>
